[feature]：新增配方修改作用域功能
- 在 `calculator.js` 中添加了根据物品名字获取计算结果的函数 `getCalculateResultByItemName`- 修改了 `treeListShow.js` 中选择配方时的数据处理逻辑，支持按当前合成路径或物品全局修改配方
- 在 `satisfactory_tree.html` 中添加了配方修改作用域的选项
- 引入了 `radio`按钮来选择配方修改的范围，提供了更灵活的配方调整方式

--- a/satisfactory_tree.html
+++ b/satisfactory_tree.html
@@ -179,6 +179,12 @@
                         <div class="ibox" id="calResult">
                             <div class="ibox-title">
                                 <h5 id="text_calculate_result">计算结果</h5>
+                                <div class="float-right">
+                                    <span>配方修改作用域：</span>
+                                    <label><input type="radio" name="recipeScope" value="currentPath">
+                                        当前合成路径</label>
+                                    <label><input type="radio" name="recipeScope" value="item" checked> 物品</label>
+                                </div>
                             </div>
                             <div class="ibox-content">
                                 <div class="feed-activity-list">
