[data]：戴森球增加巨构数据

--- a/dsp.html
+++ b/dsp.html
@@ -89,6 +89,7 @@
                                         <ul class="nav nav-tabs" role="tablist">
                                             <li><a class="nav-link active" data-toggle="tab" href="#select-material" id="text_material">材料</a></li>
                                             <li><a class="nav-link" data-toggle="tab" href="#select-build" id="text_building">建筑</a></li>
+                                            <li><a class="nav-link" data-toggle="tab" href="#select-big">巨构</a></li>
                                             <li><a class="nav-link" data-toggle="tab" href="#select-custom" id="text_other">其它</a></li>
                                         </ul>
                                         <div class="tab-content">
@@ -97,6 +98,9 @@
                                             </div>
                                             <div role="tabpanel" id="select-build" class="tab-pane">
                                                 <div class="panel-body" id="selectGridTableBuild" style="background-color: #0a568c"></div>
+                                            </div>
+                                            <div role="tabpanel" id="select-big" class="tab-pane">
+                                                <div class="panel-body" id="selectGridBigTableBuild" style="background-color: #0a568c"></div>
                                             </div>
                                             <div role="tabpanel" id="select-custom" class="tab-pane">
                                                 <div class="panel-body" id="selectGridTableCustom" style="display: grid; grid-template-columns: repeat(4, 1fr); grid-gap: 10px;"></div>
