--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
                         <div class="col-lg-12 text-center m-t-lg m-b-lg">
                             <p><strong>熊与倦猫贸易（深圳）有限公司</strong><br/></p>
                             <a href="https://beian.miit.gov.cn/" target="_blank">粤ICP备2024283143号-2</a>
+                            <br/>
+                            <a href="https://beian.mps.gov.cn/#/query/webSearch?code=44030002004885" rel="noreferrer" target="_blank">粤公网安备44030002004885</a>
                         </div>
                     </div>
                 </div>
